tests/snapshots/run_wpt_conformance__coreml_scatterElements_float32_tensors_along_axis_0_and_constant_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterElements.https.any.js scatterElements float32 tensors along axis 0 and constant indices, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type scatter: Required param 'mode' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[3, 3];
    updates: f32[2, 3];
  }

  consts {
    operand_0: i32[2, 3] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [output] = scatterElements(input, operand_0, updates, axis=0, label="");
  }

  outputs { output; }
}
