tests/snapshots/run_wpt_conformance__coreml_scatterND_2D_int8_tensors_with_index_out_of_bound.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterND.https.any.js scatterND 2D int8 tensors with index out of bound, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type scatter_nd: Required param 'mode' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    indices: i32[1, 1];
    input: i8[2, 1];
    updates: i8[1, 1];
  }

  nodes {
    [output] = scatterND(input, indices, updates, label="");
  }

  outputs { output; }
}
